--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,32 @@
-h1{
-    width: 80%;
+body {
+    /* max-height: 100vh; */
+    /* max-height: 100%; */
+    /* display: flex;
+    flex-direction: column;
+    max-width: 100%; */
+    /* overflow-y: hidden; */
+    /* max-width: 100vw; */
+}
+
+.container {
+    /* max-width: 100%; */
+}
+
+h1 {
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 12px;
-    margin-bottom: 1rem !important;
+    font-size: 1.75em !important;
+    margin-bottom: .75em !important;
 }
+
 .circle-wrap {
     /* margin: 50px auto; */
     /* width: 50%; */
     height: 150px;
     background: #ffffff;
     border-radius: 50%;
-    margin-bottom: 13%;
+    margin-bottom: 10%;
 }
 
 .circle-wrap .circle .mask,
@@ -31,39 +46,115 @@ h1{
 
 .circle-wrap .circle .mask .fill {
     clip: rect(0px, 75px, 150px, 0px);
-    background-color: #9e00b1;
-}
-
-.circle-wrap .circle .mask.full,
-.circle-wrap .circle .fill {
-    animation: fill ease-in-out 2s;
-    transform: rotate(90deg);
-    /* background-color: rgb(0, 255, 255); */
-
-}
-
-@keyframes fill {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(90deg);
-    }
+    background-color: rgb(223, 65, 91);
 }
 
 .circle-wrap .inside-circle {
     width: 130px;
     height: 130px;
     border-radius: 50%;
-    background: #fff;
-    line-height: 130px;
+    background: rgba(255, 255, 255, 0.716);
+    /* line-height: 130px; */
     text-align: center;
     margin-top: 10px;
     margin-left: 10px;
     position: absolute;
     z-index: 100;
     font-weight: 700;
-    font-size: 2em;
-    
+    font-size: 1em;
+
+}
+
+h2 {
+    margin-top: 0% !important;
+    margin-bottom: 0 !important;
+    font-size: 1em !important;
+}
+
+.circle-wrap .inside-circle h2 {
+    margin-top: 20% !important;
+    margin-bottom: 0 !important;
+    font-size: 1em !important;
+
+}
+
+.percent {
+    font-size: 1em;
+    margin-bottom: 0;
+}
+
+.circle-wrap .inside-circle .percent {
+    font-size: 1.5em;
+    margin-bottom: 0;
+}
+
+ .responses {
+    font-size: .75em;
+
+}
+
+
+header {
+    height: 60px;
+    width: 100%;
+}
+
+header ul {
+    padding: 0;
+    margin-top: 8px;
+    margin-bottom: auto;
+}
+
+header a {
+    font-weight: 600;
+    margin: 0 25px;
+    color: #fff;
+    text-decoration: none;
+}
+
+header a:hover {
+    padding-bottom: 5px;
+    box-shadow: inset 0 -2px 0 0 #fff;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+}
+
+nav {
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    background-color: pink;
+}
+
+.footer_ul {
+    height: 0;
+}
+
+footer ul {
+    padding: 0;
+    margin-top: 8px;
+    margin-bottom: auto;
+}
+
+footer a {
+    font-weight: 700;
+
+    margin: 0 25px;
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a {
+    font-size: .6em;
+}
+
+footer a:hover {
+    padding-bottom: 5px;
+    box-shadow: inset 0 -2px 0 0 #fff;
 }
