--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ footer {
 }
 
 nav {
-    height: 35px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -138,7 +138,7 @@ nav {
 
 footer ul {
     padding: 0;
-    margin-top: 8px;
+    margin-top: 2px;
     margin-bottom: auto;
 }
 
@@ -157,4 +157,12 @@ footer a {
 footer a:hover {
     padding-bottom: 5px;
     box-shadow: inset 0 -2px 0 0 #fff;
+}
+
+.mybtn{
+    background-color: rgb(223, 65, 91) !important;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 10px ;
+    margin-right: 10px;
+    font-size: .75em !important;
 }
