--- a/css/3sextoys_pie.css
+++ b/css/3sextoys_pie.css
@@ -3,7 +3,11 @@
 }
 .pieContainer {
     height: 150px;
+    width: fit-content;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:2%;
   }
   
   .pieBackground {
@@ -32,64 +36,64 @@
   }
   
   #pieSlice1 .pie {
-    background-color: #1b458b;
-    transform:rotate(30deg);
+    background-color: #ff6060;
+    transform:rotate(24.75deg);
   }
   
   #pieSlice2 {
-    transform: rotate(30deg);
+    transform: rotate(24.75deg);
   }
   
   #pieSlice2 .pie {
-    background-color: #0a0;
-    transform: rotate(60deg);
+    background-color: rgb(134, 0, 69);
+    transform: rotate(61.09deg);
   }
   
   #pieSlice3 {
-    transform: rotate(90deg);
+    transform: rotate(85.84deg);
   }
   
   #pieSlice3 .pie {
-    background-color: #f80;
-    transform: rotate(120deg);
+    background-color: rgb(62, 1, 42);
+    transform: rotate(101.84deg);
   }
   
   #pieSlice4 {
-    transform: rotate(210deg);
+    transform: rotate(187.68deg);
   }
   
   #pieSlice4 .pie {
-    background-color: #08f;
-    transform: rotate(10deg);
+    background-color: rgb(212, 102, 148);
+    transform: rotate(122.50deg);
   }
   
   #pieSlice5 {
-    transform: rotate(220deg);
+    transform: rotate(310.18deg);
   }
   
   #pieSlice5 .pie {
     background-color: #a04;
-    transform: rotate(70deg);
+    transform: rotate(40.10deg);
   }
   
   #pieSlice6 {
-    transform: rotate(290deg);
+    transform: rotate(350.28deg);
   }
   
   #pieSlice6 .pie {
-    background-color: #ffd700;
-    transform: rotate(70deg);
+    background-color: #ffaeae;
+    transform: rotate(10deg);
   }
   
   .innerCircle {
     position: absolute;
     width: 120px;
     height: 120px;
-    background-color: #444;
+    background-color: pink;
     border-radius: 100%;
-    top: 15px;
-    left: 15px; 
-    box-shadow: 0px 0px 8px rgba(0,0,0,0.5) inset;
+    top: 90px;
+    left: 90px; 
+    box-shadow: 0px 0px 8px rgba(79, 0, 0, 0.5) inset;
     color: white;
   }
   
@@ -101,4 +105,40 @@
     left: 0;
     text-align: center;
     font-size: 14px;
+  }
+
+  .color_block{
+    padding: 0 !important;
+    width: 100%;
+    height: 100%;
+    background-color: #a04;
+  }
+
+  .color_block.never{
+    background-color: #000000;
+  }
+
+  .color_block.month{
+    background-color: #ff6060;
+  }
+
+  .color_block.tmonth{
+    background-color: rgb(134, 0, 69);
+  }
+
+  
+  .color_block.week{
+    background-color: rgb(62, 1, 42);
+  }
+
+  .color_block.tweek{
+    background-color: rgb(212, 102, 148);
+  }
+
+  .color_block.daily{
+    background-color: #a04;
+  }
+
+  .color_block.multi{
+    background-color: #ffaeae;
   }
