--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     /* max-height: 100vh; */
-    /* max-height: 100%; */
+    max-height: 100%;
     /* display: flex;
     flex-direction: column;
     max-width: 100%; */
@@ -10,6 +10,27 @@ body {
 
 .container {
     /* max-width: 100%; */
+}
+
+h3{
+   
+    align-items: center;
+    text-align: center;
+    height: 60vh;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25% !important;
+    margin-bottom: auto;
+    font-size: 4em !important;
+    color: rgb(223, 65, 91);
+}
+
+h3 p{
+    font-size: .4em !important;
+    color: rgb(255, 155, 171);
+    margin-bottom: 4px;
+    margin-top: 4px;
 }
 
 h1 {
