--- a/css/3sextoys_pie.css
+++ b/css/3sextoys_pie.css
@@ -1,13 +1,16 @@
 .pieHolder{
-    height: 43vh;
+    height: 50vh;
+    max-width: 100%;
 }
 .pieContainer {
-    height: 150px;
+   
     width: fit-content;
+    max-width: 100%;
     position: relative;
     margin-left: auto;
     margin-right: auto;
     margin-top:2%;
+    margin-bottom:2%;
   }
   
   .pieBackground {
