--- a/css/1sexbyyear_circles.css
+++ b/css/1sexbyyear_circles.css
@@ -276,3 +276,11 @@
        
     }
 }
+
+.circle-wrap.big.masturbat .circle .mask.full,
+.circle-wrap.big.masturbat .circle .fill  {
+    animation: fillTinder ease-in-out 2s;
+    transform: rotate(157.75deg);
+    /* background-color: rgb(0, 255, 255); */
+
+}
