--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,10 @@ footer a:hover {
     /* margin-right: auto !important;
     margin-left: auto !important; */
     font-size: .75em !important;
+    /* padding-left: 30px !important;
+    padding-right: 30px !important; */
+    width: 100%;
+    height: 70%;
 }
 
 .buttonContain{
