--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ footer a:hover {
     margin-bottom: 30px ;
     /* margin-right: auto !important;
     margin-left: auto !important; */
-    font-size: .75em !important;
+    font-size: .75em ;
     /* padding-left: 30px !important;
     padding-right: 30px !important; */
     width: 100%;
